XMLProvinceParser: use URL